# GRraytracer-CPU

./: CMakeLists.txt
include/: raymarcher.hpp
output/: frame0.ppm
src/: main.cpp  raymarcher.cpp
